Removing /elvivero/ from url

--- a/_posts/2018-01-02-meiac-isabel-maria.html
+++ b/_posts/2018-01-02-meiac-isabel-maria.html
@@ -2,7 +2,7 @@
 layout: post_old
 title: Isabel María. Meiac
 image_path: /projects/meiac-isabel-maria
-footer: '<strong>MEIAC, Museo Extremeño e iberoamericano de Arte Contemporáneo</strong>&nbsp; 2006&nbsp; <h6>PLP01</h6> / <a href="/elvivero/meiac-maite-cajaraville">PLP02</a> / <a href="/elvivero/meiac-manuel-vilches">PLP03</a> / <a href="meiac-alonso-gil">PLP04</a> / <a href="/elvivero/meiac-ivan-marino">PLP05</a> / <a href="/elvivero/meiac-gustavo-romano">PLP06</a> / <a href="/elvivero/meiac-joana-pimentel">PLP07</a> / <a href="/elvivero/meiac-marta-y-publio">PLP08 </a>/ <a href="/elvivero/meiac-marta-de-menezes">PLP09</a><br /><strong>Isabel María,<em> The Face and The Face.</em></strong> Catalogue, 110 pages, 15x21 cm. Post Local Projects 01'
+footer: '<strong>MEIAC, Museo Extremeño e iberoamericano de Arte Contemporáneo</strong>&nbsp; 2006&nbsp; <h6>PLP01</h6> / <a href="/meiac-maite-cajaraville">PLP02</a> / <a href="/meiac-manuel-vilches">PLP03</a> / <a href="meiac-alonso-gil">PLP04</a> / <a href="/meiac-ivan-marino">PLP05</a> / <a href="/meiac-gustavo-romano">PLP06</a> / <a href="/meiac-joana-pimentel">PLP07</a> / <a href="/meiac-marta-y-publio">PLP08 </a>/ <a href="/meiac-marta-de-menezes">PLP09</a><br /><strong>Isabel María,<em> The Face and The Face.</em></strong> Catalogue, 110 pages, 15x21 cm. Post Local Projects 01'
 ---
 <img src="{% include image_path.html %}/isabel-maria-plp01-01.jpg">
 <img src="{% include image_path.html %}/isabel-maria-plp01-02.jpg">
