--- a/_posts/2018-01-02-mncars-alia-syed.html
+++ b/_posts/2018-01-02-mncars-alia-syed.html
@@ -2,7 +2,7 @@
 layout: post_old
 title: Alia Syed. MNCARS
 image_path: /projects/mncars-alia-syed
-footer: '<strong>Museo Nacional Centro de Arte Reina Sofía. Comunication department</strong>&nbsp; 2008-2010&nbsp;   <a href="/elvivero/mncars-comunicacion">Advertising /</a> <a href="/elvivero/mncars-actividades">Postcards</a> /<a href="/elvivero/mncars-kineteca">Kineteca</a> /<h6>Alia Syed</h6><br /><em><strong>Alia Syed,</strong></em> brochure, 15x21 cm'
+footer: '<strong>Museo Nacional Centro de Arte Reina Sofía. Comunication department</strong>&nbsp; 2008-2010&nbsp;   <a href="/mncars-comunicacion">Advertising /</a> <a href="/mncars-actividades">Postcards</a> /<a href="/mncars-kineteca">Kineteca</a> /<h6>Alia Syed</h6><br /><em><strong>Alia Syed,</strong></em> brochure, 15x21 cm'
 ---
 <img src="{% include image_path.html %}/aliasyed01.jpg">
 <img src="{% include image_path.html %}/aliasyed02.jpg">
