--- a/_posts/2018-01-02-mncars-cine-y-casi-2007.html
+++ b/_posts/2018-01-02-mncars-cine-y-casi-2007.html
@@ -2,7 +2,7 @@
 layout: post_old
 title: Cine y casi cine 2007. MNCARS
 image_path: /projects/mncars-cine-y-casi-2007
-footer: '<strong>Museo Nacional Centro de Arte Reina Sofía</strong>&nbsp; 2000-2010&nbsp;   <a href="/elvivero/mncars-audiovisuales">Programs</a><h6>/ Brochures</h6> <a href="/elvivero/mncars-cine-y-casi-cine">1,</a><a href="/elvivero/mncars-sesiones-animadas">2,</a><a href="/elvivero/mncars-no-performances">3,</a><a href="/elvivero/mncars-amor">4,</a><h6>5,</h6> <a href="/elvivero/mncars-latinoamerica">6</a><br /><em><strong>Cine y casi cine.</strong></em> 2007, 60 pages, 17x24 cm'
+footer: '<strong>Museo Nacional Centro de Arte Reina Sofía</strong>&nbsp; 2000-2010&nbsp;   <a href="/mncars-audiovisuales">Programs</a><h6>/ Brochures</h6> <a href="/mncars-cine-y-casi-cine">1,</a><a href="/mncars-sesiones-animadas">2,</a><a href="/mncars-no-performances">3,</a><a href="/mncars-amor">4,</a><h6>5,</h6> <a href="/mncars-latinoamerica">6</a><br /><em><strong>Cine y casi cine.</strong></em> 2007, 60 pages, 17x24 cm'
 ---
 <img src="{% include image_path.html %}/cycc2007-01.jpg">
 <img src="{% include image_path.html %}/cycc2007-02.jpg">
