--- a/_posts/2018-01-02-museo-marco.html
+++ b/_posts/2018-01-02-museo-marco.html
@@ -2,7 +2,7 @@
 layout: post_old
 title: Museo Marco
 image_path: /projects/museo-marco
-footer: '<strong>Marco, Museo de Arte contemporáneo de Vigo</strong>&nbsp; 2003&nbsp;<h6>visual identity</h6> / <a href="/elvivero/museo-marco-launch">launch</a> / <a href="/elvivero/museo-marco-stationary">stationary</a> / <a href="/elvivero/museo-marco-stand">tradestand</a><br>Diseño de marca'
+footer: '<strong>Marco, Museo de Arte contemporáneo de Vigo</strong>&nbsp; 2003&nbsp;<h6>visual identity</h6> / <a href="/museo-marco-launch">launch</a> / <a href="/museo-marco-stationary">stationary</a> / <a href="/museo-marco-stand">tradestand</a><br>Diseño de marca'
 ---
 <img src="{% include image_path.html %}/marco-01.jpg">
 <img src="{% include image_path.html %}/marco-02.jpg">
