--- a/_posts/2018-01-02-de11a21-n1.html
+++ b/_posts/2018-01-02-de11a21-n1.html
@@ -2,7 +2,7 @@
 layout: post
 title: de 11 a 21, n.1. CAAC
 image_path: /projects/de11a21-n1
-footer: '<strong>CAAC, Centro Andaluz de Arte Contemporáneo</strong>&nbsp; 2011&nbsp; <a href="/elvivero/de11a21">n.0</a> /<h6>n.1</h6> /<a href="/elvivero/de11a21-n2">n.2</a><br><strong><em>de 11 a 21.</em></strong> Issue 1, On the Political Constitution of the Present <br />Magazine, 128 pages, 19,5x25 cm'
+footer: '<strong>CAAC, Centro Andaluz de Arte Contemporáneo</strong>&nbsp; 2011&nbsp; <a href="/de11a21">n.0</a> /<h6>n.1</h6> /<a href="/de11a21-n2">n.2</a><br><strong><em>de 11 a 21.</em></strong> Issue 1, On the Political Constitution of the Present <br />Magazine, 128 pages, 19,5x25 cm'
 style: 'x'
 ---
 <img src="{% include image_path.html %}/11a21-n1-01.jpg">
