--- a/_posts/2018-01-02-meiac-gustavo-romano.html
+++ b/_posts/2018-01-02-meiac-gustavo-romano.html
@@ -2,7 +2,7 @@
 layout: post_old
 title: Gustavo Romano. Meiac
 image_path: /projects/meiac-gustavo-romano
-footer: '<strong>MEIAC, Museo Extremeño e iberoamericano de Arte Contemporáneo</strong>&nbsp; 2007&nbsp; <a href="/elvivero/meiac-isabel-maria">PLP01</a> / <a href="/elvivero/meiac-maite-cajaraville">PLP02</a> / <a href="/elvivero/meiac-manuel-vilches">PLP03</a> / <a href="/elvivero/meiac-alonso-gil">PLP04</a> / <a href="/elvivero/meiac-ivan-marino">PLP05</a> / <h6>PLP06</h6> / <a href="/elvivero/meiac-joana-pimentel">PLP07</a> / <a href="/elvivero/meiac-marta-y-publio">PLP08 </a>/ <a href="/elvivero/meiac-marta-de-menezes">PLP09</a><br /><strong>Gutavo Romano, <em>IP Poetry.</em></strong> Catalogue, 160 pages, 15x21 cm. Post Local Projects 06'
+footer: '<strong>MEIAC, Museo Extremeño e iberoamericano de Arte Contemporáneo</strong>&nbsp; 2007&nbsp; <a href="/meiac-isabel-maria">PLP01</a> / <a href="/meiac-maite-cajaraville">PLP02</a> / <a href="/meiac-manuel-vilches">PLP03</a> / <a href="/meiac-alonso-gil">PLP04</a> / <a href="/meiac-ivan-marino">PLP05</a> / <h6>PLP06</h6> / <a href="/meiac-joana-pimentel">PLP07</a> / <a href="/meiac-marta-y-publio">PLP08 </a>/ <a href="/meiac-marta-de-menezes">PLP09</a><br /><strong>Gutavo Romano, <em>IP Poetry.</em></strong> Catalogue, 160 pages, 15x21 cm. Post Local Projects 06'
 ---
 <img src="{% include image_path.html %}/gustavo-romano-plp06-01.jpg">
 <img src="{% include image_path.html %}/gustavo-romano-plp06-02.jpg">
