--- a/_posts/2018-01-02-meiac-maite-cajaraville.html
+++ b/_posts/2018-01-02-meiac-maite-cajaraville.html
@@ -2,7 +2,7 @@
 layout: post_old
 title: Maite Cajaraville. Meiac
 image_path: /projects/meiac-maite-cajaraville
-footer: '<strong>MEIAC, Museo Extremeño e iberoamericano de Arte Contemporáneo</strong>&nbsp; 2007&nbsp; <a href="/elvivero/meiac-isabel-maria">PLP01</a> / <h6>PLP02</h6> / <a href="/elvivero/meiac-manuel-vilches">PLP03</a> / <a href="meiac-alonso-gil">PLP04</a> / <a href="/elvivero/meiac-ivan-marino">PLP05</a> / <a href="/elvivero/meiac-gustavo-romano">PLP06</a> / <a href="/elvivero/meiac-joana-pimentel">PLP07</a> / <a href="/elvivero/meiac-marta-y-publio">PLP08 </a>/ <a href="/elvivero/meiac-marta-de-menezes">PLP09</a><br /><strong>Maite Cajaraville, <em>La nadadora.</em></strong> Catalogue, de 80 pages, 15x21 cm. Post Local Projects 02'
+footer: '<strong>MEIAC, Museo Extremeño e iberoamericano de Arte Contemporáneo</strong>&nbsp; 2007&nbsp; <a href="/meiac-isabel-maria">PLP01</a> / <h6>PLP02</h6> / <a href="/meiac-manuel-vilches">PLP03</a> / <a href="meiac-alonso-gil">PLP04</a> / <a href="/meiac-ivan-marino">PLP05</a> / <a href="/meiac-gustavo-romano">PLP06</a> / <a href="/meiac-joana-pimentel">PLP07</a> / <a href="/meiac-marta-y-publio">PLP08 </a>/ <a href="/meiac-marta-de-menezes">PLP09</a><br /><strong>Maite Cajaraville, <em>La nadadora.</em></strong> Catalogue, de 80 pages, 15x21 cm. Post Local Projects 02'
 ---
 <img src="{% include image_path.html %}/maite-cajaraville-plp02-01.jpg">
 <img src="{% include image_path.html %}/maite-cajaraville-plp02-02.jpg">
