--- a/_posts/2018-01-02-meiac-manuel-vilches.html
+++ b/_posts/2018-01-02-meiac-manuel-vilches.html
@@ -2,7 +2,7 @@
 layout: post_old
 title: Manuel Vilches. Meiac
 image_path: /projects/meiac-manuel-vilches
-footer: '<strong>MEIAC, Museo Extremeño e iberoamericano de Arte Contemporáneo</strong>&nbsp; 2007&nbsp; <a href="/elvivero/meiac-isabel-maria">PLP01</a> / <a href="/elvivero/meiac-maite-cajaraville">PLP02</a> / <h6>PLP03</h6> / <a href="/elvivero/meiac-alonso-gil">PLP04</a> / <a href="/elvivero/meiac-ivan-marino">PLP05</a> / <a href="/elvivero/meiac-gustavo-romano">PLP06</a> / <a href="/elvivero/meiac-joana-pimentel">PLP07</a> / <a href="/elvivero/meiac-marta-y-publio">PLP08 </a>/ <a href="/elvivero/meiac-marta-de-menezes">PLP09</a><br /><strong>Manuel Vilches, <em>La piel habitada.</em></strong> Catalogue, 80 pages, 15x21 cm. Post Local Projects 03'
+footer: '<strong>MEIAC, Museo Extremeño e iberoamericano de Arte Contemporáneo</strong>&nbsp; 2007&nbsp; <a href="/meiac-isabel-maria">PLP01</a> / <a href="/meiac-maite-cajaraville">PLP02</a> / <h6>PLP03</h6> / <a href="/meiac-alonso-gil">PLP04</a> / <a href="/meiac-ivan-marino">PLP05</a> / <a href="/meiac-gustavo-romano">PLP06</a> / <a href="/meiac-joana-pimentel">PLP07</a> / <a href="/meiac-marta-y-publio">PLP08 </a>/ <a href="/meiac-marta-de-menezes">PLP09</a><br /><strong>Manuel Vilches, <em>La piel habitada.</em></strong> Catalogue, 80 pages, 15x21 cm. Post Local Projects 03'
 ---
 <img src="{% include image_path.html %}/manuel-vilches-plp03-01.jpg">
 <img src="{% include image_path.html %}/manuel-vilches-plp03-02.jpg">
