--- a/_posts/2018-01-02-meiac-marta-de-menezes.html
+++ b/_posts/2018-01-02-meiac-marta-de-menezes.html
@@ -2,7 +2,7 @@
 layout: post_old
 title: Marta de Menezes. Meiac
 image_path: /projects/meiac-marta-de-menezes
-footer: '<strong>MEIAC, Museo Extremeño e iberoamericano de Arte Contemporáneo</strong>&nbsp; 2008&nbsp; <a href="/elvivero/meiac-isabel-maria">PLP01</a> / <a href="/elvivero/meiac-maite-cajaraville">PLP02</a> / <a href="/elvivero/meiac-manuel-vilches">PLP03</a> / <a href="/elvivero/meiac-alonso-gil">PLP04</a> / <a href="/elvivero/meiac-ivan-marino">PLP05</a> / <a href="/elvivero/meiac-gustavo-romano">PLP06</a> / <a href="/elvivero/meiac-joana-pimentel">PLP07</a> / <a href="/elvivero/meiac-marta-y-publio">PLP08</a> /<h6>PLP09</h6><br /><strong>Marta de Menezes, <em>Retrato proteico</em>.</strong> Catalogue, 128 pages, 15x21 cm. Post Local Projects 09'
+footer: '<strong>MEIAC, Museo Extremeño e iberoamericano de Arte Contemporáneo</strong>&nbsp; 2008&nbsp; <a href="/meiac-isabel-maria">PLP01</a> / <a href="/meiac-maite-cajaraville">PLP02</a> / <a href="/meiac-manuel-vilches">PLP03</a> / <a href="/meiac-alonso-gil">PLP04</a> / <a href="/meiac-ivan-marino">PLP05</a> / <a href="/meiac-gustavo-romano">PLP06</a> / <a href="/meiac-joana-pimentel">PLP07</a> / <a href="/meiac-marta-y-publio">PLP08</a> /<h6>PLP09</h6><br /><strong>Marta de Menezes, <em>Retrato proteico</em>.</strong> Catalogue, 128 pages, 15x21 cm. Post Local Projects 09'
 ---
 <img src="{% include image_path.html %}/marta-menezes-meiac-plp09-01.jpg">
 <img src="{% include image_path.html %}/marta-menezes-meiac-plp09-02.jpg">
