--- a/_posts/2018-01-02-artur-barrio.html
+++ b/_posts/2018-01-02-artur-barrio.html
@@ -2,7 +2,7 @@
 layout: post
 title: Artur Barrio
 image_path: /projects/artur-barrio
-footer: '<strong>Museo Nacional Centro de Arte Reina Sofía</strong>&nbsp; 2017-2018<br><strong><em>Artur Barrio</em></strong>. Exhibition and graphic design '
+footer: '<strong>Muse Nacional Centro de Arte Reina Sofía</strong>&nbsp; 2017-2018<br><strong><em>Artur Barrio</em></strong>. Exhibition and graphic design '
 style: '.content img{vertical-align:top;}
 '
 ---
