Cambios en el menu desplegable

--- a/_posts/2018-01-02-uma-retirada-insolita.html
+++ b/_posts/2018-01-02-uma-retirada-insolita.html
@@ -5,4 +5,4 @@ image_path: /projects/uma-retirada-insolita
 footer: '<strong>Ana Luisa Martins Costa, IPPUR/UFRJ.</strong> Rio de Janeiro, 2013<br><em><strong>Uma retirada insólita. Rio São Francisco, Barragem de Sobradinho</strong></em><br />Book, 172 pages, 13x18 cm.'
 style: ''
 ---
-<div data-configid="1546146/9373753" style="width: 600px; height: 409px;" class="issuuembed"></div><script type="text/javascript" src="//e.issuu.com/embed.js" async="true"></script>x
+<div data-configid="1546146/9373753" style="width: 600px; height: 409px;" class="issuuembed"></div><script type="text/javascript" src="//e.issuu.com/embed.js" async="true"></script>
