--- a/_posts/2018-01-02-buen-dia.html
+++ b/_posts/2018-01-02-buen-dia.html
@@ -2,7 +2,7 @@
 layout: post
 title: Buen Día
 image_path: /projects/buen-dia
-footer: '<strong>Buen Día</strong><br>Gift and souvenir objects inspired by the customs, sympathy and sense of humor that are characteristic of the Spanish culture. <br>Visit <a href="http://buendiashop.com/" target="new">Buen Día Shop</a>'
+footer: '<strong>Buen Día</strong><br>Gift and souvenir objects inspired by the customs, sympathy and sense of humor that are characteristic of the Spanish culture'
 ---
 <img src="{% include image_path.html %}/buendia-01.jpg">
 <img src="{% include image_path.html %}/buendia-02.jpg">
