--- a/_posts/2018-01-02-dark.html
+++ b/_posts/2018-01-02-dark.html
@@ -2,7 +2,7 @@
 layout: post
 title: Dark
 image_path: /projects/dark
-footer: '<strong>Torraspapel</strong> 2015<br /><strong>Dark.</strong> Concept and Design for promotional object for new paper range<br />'
+footer: '<strong>Torraspapel</strong> 2015<br /><strong>Dark.</strong> Concept and design for promotional object for new paper range<br />'
 style: '.content img{
 	display: inline;
 }
@@ -24,6 +24,3 @@ style: '.content img{
 <img class="fix535 " src="{% include image_path.html %}/dark5.jpg">
 <img class="fix535 " src="{% include image_path.html %}/dark6.jpg">
 <img class="fix535 " src="{% include image_path.html %}/dark7.jpg">
-
-
-
