--- a/_posts/2018-01-02-freshlatino2.html
+++ b/_posts/2018-01-02-freshlatino2.html
@@ -2,7 +2,7 @@
 layout: post
 title: Freshlatino 2
 image_path: /projects/freshlatino2
-footer: '<strong>Instituto Cervantes</strong> 2013-2015<br><em><strong>freshlatino 2.</strong></em> Iberoamerican experimental architecture platform<br />Visual identity, web, exhibition space and brochure design <br /><a href="http://cvc.cervantes.es/artes/freshlatino2" target="new">freshlatino2</a> '
+footer: '<strong>Instituto Cervantes</strong> 2013-2015<br><em><strong>freshlatino 2.</strong></em> Iberoamerican experimental architecture platform<br />Visual identity, web, exhibition space and brochure design'
 style: '
 body{background-color: #a5a5a5;}
 '
