--- a/estudio.html
+++ b/estudio.html
@@ -31,7 +31,7 @@ style: "img{
 	.text{
 		font-size: 12px;
 	}
-	
+
 }
 "
 ---
@@ -58,8 +58,7 @@ style: "img{
 			<p>Autor de los libros <i></i>Hasta fin de existencias I y II</i>. <br /><a href="http://instagram.com/leandrolattes" target="_blank">Instagram</a> <a href="https://es.linkedin.com/pub/leandro-lattes/28/ab8/770" target="_blank">LinkedIn</a></p>
 			<p class="p4"><br></p>
 			<p><b>Colaboradores</b></p>
-			<p>Luis Castro, Axel Kacelnik, Brendan McCormick, <br>
-				Carolina Matos, David Sueiro.
+			<p>Luis Castro, Ruth García de Santiago, <br> Axel Kacelnik, Brendan Mc Cormick, <br>Carolina Matos, David Sueiro.
 			</p>
 			<p class="p4"><br></p>
 		</div>
