--- a/_posts/2018-01-02-extremadura-es-cultura.html
+++ b/_posts/2018-01-02-extremadura-es-cultura.html
@@ -2,7 +2,7 @@
 layout: post
 title: Extremadura es Cultura
 image_path: /projects/extremadura-es-cultura
-footer: '<strong>Gobex, Gobierno de Extremadura </strong> 2013-2014<br>E<strong><em>xtremadura es Cultura</em></strong>. Brand design and visual identity<br />Exhibition space design: Berlin - Lisboa - Brussels. Trade fair stand design ai Xian, China. Brochure design '
+footer: '<strong>Gobex, Gobierno de Extremadura </strong> 2013-2014<br><strong><em>Extremadura es Cultura</em></strong>. Visual identity, exhibition and graphic design. Berlin, Lisboa & Brussels. Trade fair stand design, Xian, China'
 style: 'x'
 ---
 <iframe src="//player.vimeo.com/video/112303320?byline=0[content]amp;portrait=0[content]amp;color=ffffff" width="950" height="534" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen class="espacio30" ></iframe>
@@ -31,4 +31,3 @@ style: 'x'
 <img src="{% include image_path.html %}/extrecult3.jpg" />
 
 <img src="{% include image_path.html %}/extremaduracultura.jpg" />
-
