--- a/_posts/2018-01-02-7-impertinentes.html
+++ b/_posts/2018-01-02-7-impertinentes.html
@@ -2,7 +2,7 @@
 layout: post
 title: 7 impertinentes
 image_path: /projects/7-impertinentes
-footer: '<strong>CentroCentro, Palacio de Cibeles de Madrid</strong>&nbsp; 2012<br><strong><em>7 (im-)Pertinentes</em></strong>. Exhibition Visual Identity and graphics'
+footer: '<strong>CentroCentro, Ayuntamiento de Madrid</strong>&nbsp; 2013<br><strong><em>7 (im-)Pertinentes</em></strong>. Exhibition graphics, brochure & communication design'
 style: '.content img{vertical-align:top;}
 '
 ---
@@ -22,4 +22,3 @@ style: '.content img{vertical-align:top;}
 <img src="{% include image_path.html %}/7impertinentes-b6.jpg"class="espacio30">
 <img src="{% include image_path.html %}/7impertinentes-b8.jpg"class="espacio15">
 <img src="{% include image_path.html %}/7impertinentes-b7.jpg">
-
