--- a/_posts/2018-01-02-biaci-1.html
+++ b/_posts/2018-01-02-biaci-1.html
@@ -2,7 +2,7 @@
 layout: post
 title: Bienal de Cartagena de Indias #1
 image_path: /projects/biaci-1
-footer: '<strong>Biaci. International Biennial of Contemporary Art. Cartagena de Indias, Colombia</strong> 2014<br><strong><em>#1</em></strong>. Book, 470 pages, 19,5x26 cm<br /><strong><em>GuideBook</em></strong>. Guide, 352 pages, 12x16,5 cm'
+footer: '<strong>International Biennial of Contemporary Art. Cartagena de Indias, Colombia</strong> 2014<br><strong><em>Biaci #1</em></strong>. Book, 470 pages, 19,5x26 cm. Guidebook, 352 pages, 12x16,5 cm'
 style: 'body{background-color: #a5a5a5;}x'
 ---
 <iframe src="//player.vimeo.com/video/114124747?title=0[content]amp;byline=0[content]amp;portrait=0[content]amp;color=ffffff[content]amp;autoplay=1[content]amp;loop=1" width="951" height="535" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen  class="espacio30" ></iframe>
