--- a/_posts/2018-01-02-chachi.html
+++ b/_posts/2018-01-02-chachi.html
@@ -2,7 +2,7 @@
 layout: post_old
 title: Chachi
 image_path: /projects/chachi
-footer: '<strong>La Casa Encendida  Basurama</strong> &nbsp;2005 <br><strong><em>Chachi-100% cajón</em></strong> Building game designed and made out of recycled fruit crates'
+footer: '<strong>La Casa Encendida</strong> &nbsp;2005 <br><strong><em>2x1 </em></strong>Exhibition curated by Basurama. <strong><em>Chachi-100% cajón</em></strong>, building game design. Product made from recycled fruit crates'
 ---
 <img src="{% include image_path.html %}/chachi-01.jpg">
 <img src="{% include image_path.html %}/chachi-02.jpg">
