--- a/_posts/2018-01-02-madrid-mirada.html
+++ b/_posts/2018-01-02-madrid-mirada.html
@@ -2,7 +2,7 @@
 layout: post_old
 title: Madrid Mirada
 image_path: /projects/madrid-mirada
-footer: '<strong>AECID, Ministerio de Asuntos Exteriores</strong>&nbsp; 2008 <br><strong>Madrid Mirada.</strong> Catalogue, 204 pages, 21x26 cm. Leaflet and exhibition image.'
+footer: '<strong>AECID, Ministerio de Asuntos Exteriores</strong>&nbsp; 2008 <br><strong><em>Madrid Mirada.</em></strong> Catalogue, 204 pages, 21x26 cm. Leaflet and exhibition image'
 ---
 <img src="{% include image_path.html %}/madridmirada-01.jpg">
 <img src="{% include image_path.html %}/madridmirada-02.jpg">
