--- a/_posts/2018-01-02-pitch-in.html
+++ b/_posts/2018-01-02-pitch-in.html
@@ -2,7 +2,7 @@
 layout: post
 title: Pitch-In
 image_path: /projects/pitch-in
-footer: "<strong>La Noche en Blanco 2010, edition curated by Basurama</strong> <br /><strong><em>Pitch-in</em> </strong> Paper Basket. Produced out of the carpet installed to celebrate Madrid's Gran Vía 100th anniversary <br />Event: Pitch-in game"
+footer: "<strong>Ayuntamiento de Madrid, La noche en blanco</strong> 2010<br /><strong><em> Pitch-in.</em> </strong> Paper basket design, produced out of the carpet installed to celebrate Madrid's Gran Vía 100th anniversary <br />Event concept & design: Pitch-in game"
 style: '.content img{
 	display: inline;
 }
