--- a/_posts/2018-01-02-arco.html
+++ b/_posts/2018-01-02-arco.html
@@ -2,7 +2,7 @@
 layout: post_old
 title: ARCO 25th anniversary
 image_path: /projects/arco
-footer: '<strong>ARCO, Feria internacional de Arte Contemporáneo</strong>&nbsp; 2006<br><strong><em>25th Anniversary. A Retrospective.</em></strong> Magazine, 228 pages, 23,5x32 cm'
+footer: '<strong>ARCO, International Contemporary Art Fair</strong>&nbsp; 2006<br><strong><em>25th Anniversary. A Retrospective.</em></strong> Magazine, 228 pages, 23,5x32 cm'
 ---
 <img src="{% include image_path.html %}/arco-01.jpg">
 <img src="{% include image_path.html %}/arco-02.jpg">
