--- a/_posts/2018-01-02-ministerio-sanidad.html
+++ b/_posts/2018-01-02-ministerio-sanidad.html
@@ -2,7 +2,7 @@
 layout: post_old
 title: Ministerio de Sanidad y Consumo
 image_path: /projects/ministerio-sanidad
-footer: '<strong>Ministerio de Sanidad y Consumo</strong>&nbsp; 2007 <br>Publication guidelines'
+footer: '<strong>Spanish Ministry of health and Social Policy</strong>&nbsp; 2007 <br>Publication guidelines'
 ---
 <img src="{% include image_path.html %}/ms-01.jpg">
 <img src="{% include image_path.html %}/ms-02.jpg">
