--- a/_posts/2018-01-02-hfde1.html
+++ b/_posts/2018-01-02-hfde1.html
@@ -2,7 +2,7 @@
 layout: post
 title: Hasta fin de existencias
 image_path: /projects/hfde1
-footer: '<strong><em>While Stocks Last. Urban details from Madrid</em></strong>&nbsp; 2003 <br>380 photos, 228 pages, 21x10,5 cm<br>A personal project by Leandro Lattes, focusing on urban details of Madrid, heading for extinction.<br>It contains images of shop facades, window displays, metal grilles, security curtains, doorways, handles, doorknobs, signs, directories and intercoms.<br><a href="http://buendiashop.com/" target="new">Buy book</a>'
+footer: '<strong><em>While Stocks Last. Urban details from Madrid</em></strong>&nbsp; 2003 <br><strong><em>Hasta fin de existencias. Detalles urbanos de Madrid</em></strong>380 photos, 228 pages, 21x10,5 cm<br>Project by Leandro Lattes, focusing on urban details of Madrid, heading for extinction'
 style: '.content img{
 	display: inline;
 }
@@ -30,6 +30,3 @@ style: '.content img{
 <img src="{% include image_path.html %}/hfde-06.jpg">
 <img src="{% include image_path.html %}/hfde-07.jpg">
 <img src="{% include image_path.html %}/hfde-08.jpg" class="espacio25">
-
-
-
