--- a/_posts/2018-01-02-hfde2.html
+++ b/_posts/2018-01-02-hfde2.html
@@ -2,7 +2,7 @@
 layout: post
 title: Hasta fin de existencias 2
 image_path: /projects/hfde2
-footer: '<strong><em>While Stocks Last 2. Bars and coffee shops of Madrid</em></strong>&nbsp; 2004 <br>540 photos, 256 pages, 21x10,5 cm<br>A personal project by Leandro Lattes, focusing on urban details of Madrid, heading for extinction.<br>It includes view of the interiors of bars and cafeterias and of the furniture and fixtures of “dubious design”<br> which, once put together as series and compared, reveal a hitherto unappreciated charm and interest.<br><a href="http://buendiashop.com/" target="new">Buy book</a>'
+footer: '<strong><em>While Stocks Last 2. Bars and coffee shops of Madrid</em></strong>&nbsp; 2004 <br><strong><em>Hasta fin de existencias 2. Bares y cafeterías de Madrid</em></strong>. 540 photos, 256 pages, 21x10,5 cm<br>Project by Leandro Lattes. Views of the interiors of bars and cafeterias and of the furniture and fixtures of “dubious design”'
 style: '.content img{
 	display: inline;
 }
@@ -29,6 +29,3 @@ style: '.content img{
 <img src="{% include image_path.html %}/hfde2-05.jpg">
 <img src="{% include image_path.html %}/hfde2-06.jpg">
 <img src="{% include image_path.html %}/hfde2-07.jpg" class="espacio25">
-
-
-
