--- a/_posts/2018-01-02-luminaria-basica.html
+++ b/_posts/2018-01-02-luminaria-basica.html
@@ -2,7 +2,7 @@
 layout: post_old
 title: Luminaria básica
 image_path: /projects/luminaria-basica
-footer: '<strong>Luminaria básica</strong> 2002 <br>Lighting collection in casted resin and silicone '
+footer: '<strong><em> Luminaria básica</em></strong> 2002 <br>Lighting collection in casted resin and silicone '
 style: 'body{background-color: #a5a5a5;}'
 ---
 <img src="{% include image_path.html %}/lm-01.jpg">
