--- a/_posts/2018-01-02-artur-barrio.html
+++ b/_posts/2018-01-02-artur-barrio.html
@@ -2,21 +2,18 @@
 layout: post
 title: Artur Barrio
 image_path: /projects/artur-barrio
-footer: '<strong>Museo Nacional Centro de Arte Reina Sofía</strong>&nbsp; 2017-2018<br><strong><em>Artur Barrio</em></strong>. Exhibition and graphic design '
+footer: '<strong>Museo Reina Sofía</strong>&nbsp; 2017-2018<br><strong><em>Artur Barrio</em></strong>. Exhibition and graphic design '
 style: '.content img{vertical-align:top;}
 '
 ---
 <img src="{% include image_path.html %}/Artur-Barrio-01.jpg" class="fix535">
-<img src="{% include image_path.html %}/Artur-Barrio-02.jpg" class="fix535">
 <img src="{% include image_path.html %}/Artur-Barrio-04.jpg" class="fix535">
 <img src="{% include image_path.html %}/Artur-Barrio-05.jpg" class="fix535">
 <img src="{% include image_path.html %}/Artur-Barrio-06.jpg" class="fix535">
 <img src="{% include image_path.html %}/Artur-Barrio-07.jpg" class="fix535">
 <img src="{% include image_path.html %}/Artur-Barrio-08.jpg" class="fix535">
-<img src="{% include image_path.html %}/Artur-Barrio-09.jpg" class="fix535">
-<img src="{% include image_path.html %}/Artur-Barrio-10.jpg" class="fix535">
 <img src="{% include image_path.html %}/Artur-Barrio-11.jpg" class="fix535">
-<img src="{% include image_path.html %}/Artur-Barrio-12.jpg" class="fix535">
+<img src="{% include image_path.html %}/Artur-Barrio-09.jpg" class="fix535">
 <img src="{% include image_path.html %}/Artur-Barrio-13.jpg" class="fix535 espacio25">
 <img src="{% include image_path.html %}/ABrendering.jpg" class="fix535 espacio25">
 
