--- a/_posts/2018-01-02-lax.html
+++ b/_posts/2018-01-02-lax.html
@@ -2,7 +2,7 @@
 layout: post
 title: LAX video and performance. Museo Reina Sofía
 image_path: /projects/lax
-footer: '<strong>Museo Nacional Centro de Arte Reina Sofía</strong> 2010 <br><strong><em>LAX. Los Ángeles Films, Videos and Performances</em></strong>. 32 pages, 15x21 cm'
+footer: '<strong>Museo Reina Sofía</strong> 2010 <br><strong><em>LAX. Los Ángeles Films, Videos and Performances</em></strong>. 32 pages, 15x21 cm'
 style: 'x'
 ---
 <img src="{% include image_path.html %}/lax-01.jpg">
