--- a/_posts/2018-01-02-mncars-amor.html
+++ b/_posts/2018-01-02-mncars-amor.html
@@ -2,7 +2,7 @@
 layout: post
 title: Describiendo el amor. MNCARS
 image_path: /projects/mncars-amor
-footer: '<strong>Museo Nacional Centro de Arte Reina Sofía</strong>&nbsp; 2000-2010&nbsp;   <a href="/mncars-audiovisuales">Programs</a><h6>/ Brochures</h6> <a href="/mncars-cine-y-casi-cine">1,</a><a href="/mncars-sesiones-animadas">2,</a><a href="/mncars-no-performances">3,</a><h6>4,</h6> <a href="/mncars-cine-y-casi-2007">5,</a> <a href="/mncars-latinoamerica">6</a><br /><em><strong>Describiendo el amor.</strong></em> 2004, 48 pages, 12x17 cm'
+footer: '<strong>Museo Reina Sofía</strong>&nbsp; 2000-2010&nbsp;   <a href="/mncars-audiovisuales">Programs</a><h6>/ Brochures</h6> <a href="/mncars-cine-y-casi-cine">1,</a><a href="/mncars-sesiones-animadas">2,</a><a href="/mncars-no-performances">3,</a><h6>4,</h6> <a href="/mncars-cine-y-casi-2007">5,</a> <a href="/mncars-latinoamerica">6</a><br /><em><strong>Describiendo el amor.</strong></em> 2004, 48 pages, 12x17 cm'
 style: '.content img{
 	display: inline;
 }
@@ -25,4 +25,3 @@ style: '.content img{
 <img src="{% include image_path.html %}/amor-05.jpg">
 <img src="{% include image_path.html %}/amor-06.jpg">
 <img src="{% include image_path.html %}/amor-07.jpg">
-
