--- a/_posts/2018-01-02-monocanal.html
+++ b/_posts/2018-01-02-monocanal.html
@@ -2,7 +2,7 @@
 layout: post_old
 title: Monocanal
 image_path: /projects/monocanal
-footer: '<strong>Museo Nacional Centro de Arte Reina Sofía</strong> &nbsp;2003 <br><strong><em>Monocanal.</em></strong> Book, 248 pages, 14x21 cm '
+footer: '<strong>Museo Reina Sofía</strong> &nbsp;2003 <br><strong><em>Monocanal.</em></strong> Book, 248 pages, 14x21 cm '
 ---
 <img src="{% include image_path.html %}/monocanal-01.jpg">
 <img src="{% include image_path.html %}/monocanal-02.jpg">
