--- a/_posts/2018-01-02-multitud-singular.html
+++ b/_posts/2018-01-02-multitud-singular.html
@@ -2,7 +2,7 @@
 layout: post
 title: Multitud Singular
 image_path: /projects/multitud-singular
-footer: '<strong>Museo Nacional Centro de Arte Reina Sofía</strong> 2009 <br><strong><em>Multitud Singular. El arte de resistir.</em></strong> Catalogue,160 pages, 15x21 cm'
+footer: '<strong>Museo Reina Sofía</strong> 2009 <br><strong><em>Multitud Singular. El arte de resistir.</em></strong> Catalogue,160 pages, 15x21 cm'
 style: 'x'
 ---
 <img src="{% include image_path.html %}/multitud-01.jpg">
