--- a/_posts/2018-01-02-transutopias.html
+++ b/_posts/2018-01-02-transutopias.html
@@ -2,7 +2,7 @@
 layout: post
 title: Transutopias
 image_path: /projects/transutopias
-footer: '<strong>Centro Centro</strong>&nbsp; 2018<br><strong><em>Transutopias. Movilidad. Movimiento. Movilización</em></strong>. Exhibition and graphic design '
+footer: '<strong>Centro Centro, Ayuntamiento de Madrid</strong>&nbsp; 2018<br><strong><em>Transutopias. Movilidad. Movimiento. Movilización</em></strong>. Exhibition and graphic design '
 style: '.content img{vertical-align:top;}
 '
 ---
@@ -11,18 +11,14 @@ style: '.content img{vertical-align:top;}
 <img src="{% include image_path.html %}/Transutopias02.jpg" class="fix535">
 <img src="{% include image_path.html %}/Transutopias08.jpg" class="fix535">
 <img src="{% include image_path.html %}/Transutopias05.jpg" class="fix535">
-<img src="{% include image_path.html %}/Transutopias04.jpg" class="fix535">
 <img src="{% include image_path.html %}/Transutopias07.jpg" class="fix535">
-<img src="{% include image_path.html %}/Transutopias10.jpg" class="fix535">
 <img src="{% include image_path.html %}/Transutopias11.jpg" class="fix535">
 <img src="{% include image_path.html %}/Transutopias13.jpg" class="fix535">
 <img src="{% include image_path.html %}/Transutopias14.jpg" class="fix535">
 <img src="{% include image_path.html %}/Transutopias17.jpg" class="fix535">
 <img src="{% include image_path.html %}/Transutopias18.jpg" class="fix535">
-<img src="{% include image_path.html %}/Transutopias20.jpg" class="fix535">
 <img src="{% include image_path.html %}/Transutopias23.jpg" class="fix535">
 <img src="{% include image_path.html %}/Transutopias26.jpg" class="fix535">
-<img src="{% include image_path.html %}/Transutopias28.jpg" class="fix535">
 <img src="{% include image_path.html %}/Transutopias29.jpg" class="fix535">
 <img src="{% include image_path.html %}/Transutopias30.jpg" class="fix535  espacio30">
 
