--- a/_posts/2018-01-02-mncars-no-performances.html
+++ b/_posts/2018-01-02-mncars-no-performances.html
@@ -2,7 +2,7 @@
 layout: post
 title: No lo llames performance. MNCARS
 image_path: /projects/mncars-no-performances
-footer: '<strong>Museo Nacional Centro de Arte Reina Sofía</strong>&nbsp; 2000-2010&nbsp;   <a href="/mncars-audiovisuales">Programs</a><h6>/ Brochures</h6> <a href="/mncars-cine-y-casi-cine">1,</a><a href="/mncars-sesiones-animadas">2,</a><h6>3,</h6> <a href="/mncars-amor">4,</a> <a href="/mncars-cine-y-casi-2007">5,</a> <a href="/mncars-latinoamerica">6</a><br /><em><strong>No lo llames performance.</strong></em> 2003, 48 pages, 12x17 cm'
+footer: '<strong>Museo Reina Sofía</strong>&nbsp; 2000-2010&nbsp;   <a href="/mncars-audiovisuales">Programs</a><h6>/ Brochures</h6> <a href="/mncars-cine-y-casi-cine">1,</a><a href="/mncars-sesiones-animadas">2,</a><h6>3,</h6> <a href="/mncars-amor">4,</a> <a href="/mncars-cine-y-casi-2007">5,</a> <a href="/mncars-latinoamerica">6</a><br /><em><strong>No lo llames performance.</strong></em> 2003, 48 pages, 12x17 cm'
 style: '.content img{
 	display: inline;
 }
@@ -24,4 +24,3 @@ style: '.content img{
 <img src="{% include image_path.html %}/no-perf-04.jpg">
 <img src="{% include image_path.html %}/no-perf-05.jpg">
 <img src="{% include image_path.html %}/no-perf-06.jpg">
-
