--- a/_posts/2018-01-02-mncars-sesiones-animadas.html
+++ b/_posts/2018-01-02-mncars-sesiones-animadas.html
@@ -2,7 +2,7 @@
 layout: post_old
 title: Sesiones animadas. MNCARS
 image_path: /projects/mncars-sesiones-animadas
-footer: '<strong>Museo Nacional Centro de Arte Reina Sofía </strong>&nbsp; 2000-2010&nbsp;   <a href="/mncars-audiovisuales">Programs</a><h6>/ Brochures</h6> <a href="/mncars-cine-y-casi-cine">1,</a><h6>2,</h6> <a href="/mncars-no-performances">3,</a> <a href="/mncars-amor">4,</a> <a href="/mncars-cine-y-casi-2007">5,</a> <a href="/mncars-latinoamerica">6</a><br /><em><strong>Sesiones animadas,</strong></em> 16 pages, 17x24 cm'
+footer: '<strong>Museo Reina Sofía </strong>&nbsp; 2000-2010&nbsp;   <a href="/mncars-audiovisuales">Programs</a><h6>/ Brochures</h6> <a href="/mncars-cine-y-casi-cine">1,</a><h6>2,</h6> <a href="/mncars-no-performances">3,</a> <a href="/mncars-amor">4,</a> <a href="/mncars-cine-y-casi-2007">5,</a> <a href="/mncars-latinoamerica">6</a><br /><em><strong>Sesiones animadas,</strong></em> 16 pages, 17x24 cm'
 style: 'body{background-color: #a5a5a5;}'
 ---
 <img src="{% include image_path.html %}/sesanim-01.jpg" class="espacio25">
