--- a/_posts/2018-01-02-ana-luiza-martins-costa.html
+++ b/_posts/2018-01-02-ana-luiza-martins-costa.html
@@ -2,7 +2,7 @@
 layout: post
 title: Ana Luiza Martins Costa. Uma retirada insólita
 image_path: /projects/ana-luiza-martins-costa
-footer: '<strong>Universidade Federal do Rio de Janeiro, Brasil</strong> IPPUR, Instituto de Pesquisa e Planejamento Urbano e Regional. 2014<br><strong>Ana Luiza Martins Costa,<em>Uma retirada insólita. Rio São Francisco, Barragem de Sobradinho</em></strong><br />Book, 470 pages, 19,5x26 cm'
+footer: '<strong>Universidade Federal do Rio de Janeiro, Brasil</strong> IPPUR, Instituto de Pesquisa e Planejamento Urbano e Regional. 2014<br><strong>Ana Luiza Martins Costa,<em> Uma retirada insólita. Rio São Francisco, Barragem de Sobradinho</em></strong><br />Book, 470 pages, 19,5x26 cm'
 style: 'body{background-color: #a5a5a5;}x'
 ---
-<iframe src="//player.vimeo.com/video/114122272?title=0&amp;byline=0&amp;portrait=0&amp;color=ffffff&amp;autoplay=1&amp;loop=1" width="951" height="535" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>x
+<iframe src="//player.vimeo.com/video/114122272?title=0&amp;byline=0&amp;portrait=0&amp;color=ffffff&amp;autoplay=1&amp;loop=1" width="951" height="535" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
