--- a/_posts/2018-01-02-carcel-de-amor.html
+++ b/_posts/2018-01-02-carcel-de-amor.html
@@ -2,7 +2,7 @@
 layout: post_old
 title: Cárcel de amor (cat)
 image_path: /projects/carcel-de-amor
-footer: '<strong>Museo Nacional Centro de Arte Reina Sofía</strong>&nbsp; 2005&nbsp;<br /><em><strong>Cárcel de amor. </strong></em>Book, 368 pages, 17x22,5 cm'
+footer: '<strong>Museo Reina Sofía</strong>&nbsp; 2005&nbsp;<br /><em><strong>Cárcel de amor. </strong></em>Book, 368 pages, 17x22,5 cm'
 style: 'body{background-color: #a5a5a5;}'
 ---
 <img src="{% include image_path.html %}/carmor-01.jpg" class="espacio25">
