--- a/_posts/2018-01-02-first-generation.html
+++ b/_posts/2018-01-02-first-generation.html
@@ -2,7 +2,7 @@
 layout: post_old
 title: First Generation
 image_path: /projects/primera-generacion
-footer: '<strong>Museo Nacional Centro de Arte Reina Sofía</strong>&nbsp; 2006<br><strong><em>First Generation. Art and Moving Images.</em></strong> Book, 428 pages, 19x25 cm'
+footer: '<strong>Museo Reina Sofía</strong>&nbsp; 2006<br><strong><em>First Generation. Art and Moving Images.</em></strong> Book, 428 pages, 19x25 cm'
 ---
 <img src="{% include image_path.html %}/firstg-01.jpg">
 <img src="{% include image_path.html %}/firstg-02.jpg">
