--- a/_posts/2018-01-02-fluxus.html
+++ b/_posts/2018-01-02-fluxus.html
@@ -2,7 +2,7 @@
 layout: post
 title: Fluxus
 image_path: /projects/fluxus
-footer: '<strong>Museo Nacional Centro de Arte Reina Sofía</strong>&nbsp; 2003<br><strong><em>Fluxus.</em></strong> Book, 344 pages, 17x24 cm'
+footer: '<strong>Museo Reina Sofía</strong>&nbsp; 2003<br><strong><em>Fluxus.</em></strong> Book, 344 pages, 17x24 cm'
 style: 'x'
 ---
 <img src="{% include image_path.html %}/fluxus-01.jpg">
