--- a/_posts/2018-01-02-hito-steyerl.html
+++ b/_posts/2018-01-02-hito-steyerl.html
@@ -2,7 +2,7 @@
 layout: post
 title: Hito Steyerl
 image_path: /projects/hito-steyerl
-footer: '<strong>Museo Nacional Centro de Arte Reina Sofía</strong> 2015 <br><strong><em>Hito Steyerl. Duty-Free Art.</em></strong> Book, 176 pages, 17x24 cm'
+footer: '<strong>Museo Reina Sofía</strong> 2015 <br><strong><em>Hito Steyerl. Duty-Free Art.</em></strong> Book, 176 pages, 17x24 cm'
 style: '.content img{
 	display: inline;
 }
@@ -29,7 +29,3 @@ style: '.content img{
 <img class="fix535 " src="{% include image_path.html %}/HS10.jpg">
 <img class="fix535 " src="{% include image_path.html %}/HS11.jpg">
 <img class="fix535 " src="{% include image_path.html %}/HS12.jpg">
-
-
-
-
