--- a/_posts/2018-01-02-jack-smith.html
+++ b/_posts/2018-01-02-jack-smith.html
@@ -2,7 +2,7 @@
 layout: post_old
 title: Jack Smith
 image_path: /projects/jack-smith
-footer: '<strong>Museo Nacional Centro de Arte Reina Sofía</strong>&nbsp; 2008 <br><strong><em>Jack Smith.</em></strong> Catalogue, 84 pages, 17x24 cm'
+footer: '<strong>Museo Reina Sofía</strong>&nbsp; 2008 <br><strong><em>Jack Smith.</em></strong> Catalogue, 84 pages, 17x24 cm'
 ---
 <img src="{% include image_path.html %}/jacksmith-01.jpg">
 <img src="{% include image_path.html %}/jacksmith-02.jpg">
