--- a/_posts/2018-01-02-mncars-comunicacion.html
+++ b/_posts/2018-01-02-mncars-comunicacion.html
@@ -2,7 +2,7 @@
 layout: post_old
 title: Comunicación. MNCARS
 image_path: /projects/mncars-comunicacion
-footer: '<strong>Museo Reina Sofía. Comunication department</strong>&nbsp; 2008-2010&nbsp;   <h6>Advertising /</h6><a href="/mncars-actividades">Postcards</a> /<a href="/mncars-kineteca">Kineteca</a> /<a href="/mncars-alia-syed">Alia Syed</a><br />Advertising and subway posters (selection)'
+footer: '<strong>Museo Reina Sofía. Communication department</strong>&nbsp; 2008-2010&nbsp;   <h6>Advertising /</h6><a href="/mncars-actividades">Postcards</a> /<a href="/mncars-kineteca">Kineteca</a> /<a href="/mncars-alia-syed">Alia Syed</a><br />Advertising and subway posters (selection)'
 ---
 <img src="{% include image_path.html %}/comunica-mncars-01.jpg">
 <img src="{% include image_path.html %}/comunica-mncars-02.jpg">
