--- a/_posts/2018-01-02-mncars-kineteca.html
+++ b/_posts/2018-01-02-mncars-kineteca.html
@@ -2,7 +2,7 @@
 layout: post_old
 title: Kineteca. MNCARS
 image_path: /projects/mncars-kineteca
-footer: '<strong>Museo Reina Sofía. Comunication department</strong>&nbsp; 2008-2010&nbsp;   <a href="/mncars-comunicacion">Advertising /</a> <a href="/mncars-actividades">Postcards</a> /<h6>Kineteca</h6> /<a href="/mncars-alia-syed">Alia Syed</a><br /><em><strong>Kineteca</strong></em>, brochure, 56x48 cm'
+footer: '<strong>Museo Reina Sofía. Communication department</strong>&nbsp; 2008-2010&nbsp;   <a href="/mncars-comunicacion">Advertising /</a> <a href="/mncars-actividades">Postcards</a> /<h6>Kineteca</h6> /<a href="/mncars-alia-syed">Alia Syed</a><br /><em><strong>Kineteca</strong></em>, brochure, 56x48 cm'
 ---
 <img src="{% include image_path.html %}/kineteca01.jpg">
 <img src="{% include image_path.html %}/kineteca02.jpg">
