--- a/_posts/2018-01-02-samuel-beckett.html
+++ b/_posts/2018-01-02-samuel-beckett.html
@@ -2,7 +2,7 @@
 layout: post_old
 title: Samuel Beckett
 image_path: /projects/samuel-beckett
-footer: '<strong>Museo Nacional Centro de Arte Reina Sofía</strong>&nbsp; 2006<br><em><strong>Samuel Beckett.</strong></em> Book, 96 pages, 17x24 cm'
+footer: '<strong>Museo Reina Sofía</strong>&nbsp; 2006<br><em><strong>Samuel Beckett.</strong></em> Book, 96 pages, 17x24 cm'
 ---
 <img src="{% include image_path.html %}/sbeckett-01.jpg">
 <img src="{% include image_path.html %}/sbeckett-02.jpg">
