--- a/_posts/2018-01-02-stan-brakhage.html
+++ b/_posts/2018-01-02-stan-brakhage.html
@@ -2,7 +2,7 @@
 layout: post_old
 title: Stan Brakhage
 image_path: /projects/stan-brakhage
-footer: '<strong>Museo Nacional Centro de Arte Reina Sofía</strong>&nbsp; 2004<br><em><strong>Stan Brakhage.</strong></em> Book, 96 pages, 17x24 cm'
+footer: '<strong>Museo Reina Sofía</strong>&nbsp; 2004<br><em><strong>Stan Brakhage.</strong></em> Book, 96 pages, 17x24 cm'
 ---
 <img src="{% include image_path.html %}/stan-brakhage-01.jpg">
 <img src="{% include image_path.html %}/stan-brakhage-02.jpg">
