--- a/_posts/2018-01-02-ulrike-ottinger.html
+++ b/_posts/2018-01-02-ulrike-ottinger.html
@@ -2,7 +2,7 @@
 layout: post_old
 title: Ulrike Ottinger
 image_path: /projects/ulrike-ottinger
-footer: '<strong>Museo Nacional Centro de Arte Reina Sofía</strong>&nbsp; 2004<br><em><strong>Ulrike Ottinger.</strong></em> Book, 80 pages, 17x24 cm'
+footer: '<strong>Museo Reina Sofía</strong>&nbsp; 2004<br><em><strong>Ulrike Ottinger.</strong></em> Book, 80 pages, 17x24 cm'
 ---
 <img src="{% include image_path.html %}/otng-01.jpg">
 <img src="{% include image_path.html %}/otng-02.jpg">
