changing year in footer and layout of hfde projects

--- a/_posts/2018-01-02-hfde2.html
+++ b/_posts/2018-01-02-hfde2.html
@@ -1,24 +1,9 @@
 ---
-layout: post
+layout: post_old
 title: Hasta fin de existencias 2
 image_path: /projects/hfde2
 footer: '<strong><em>While Stocks Last 2. Bars and coffee shops of Madrid</em></strong>&nbsp; 2004 <br><strong><em>Hasta fin de existencias 2. Bares y cafeterías de Madrid</em></strong>. 540 photos, 256 pages, 21x10,5 cm<br>Project by Leandro Lattes. Views of the interiors of bars and cafeterias and of the furniture and fixtures of “dubious design”'
-style: '.content img{
-	display: inline;
-}
-.content{
-	margin-top: 65px;
-	font-family: arial;
-	height:250px;
-	padding: 25px;
-	font-size:14px;
-	padding-bottom: 20px;
-	padding-top: 0px;
-	white-space: nowrap;
-}
-#video{
-	margin-right: 30px;
-}'
+style: '.description{top: 345px !important;} #video{margin-right: 30px;}'
 ---
 <iframe src="//player.vimeo.com/video/104167420?title=0[content]amp;byline=0[content]amp;portrait=0[content]amp;color=ffffff[content]amp;autoplay=1[content]amp;loop=1" width="444" height="250" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen id="video"></iframe>
 
