Escaparate fixes and rearranging.

--- a/_posts/2018-01-02-mncars-audiovisuales.html
+++ b/_posts/2018-01-02-mncars-audiovisuales.html
@@ -1,5 +1,5 @@
 ---
-layout: post
+layout: post_old
 title: Audiovisuales MNCARS
 image_path: /projects/mncars-audiovisuales
 footer: '<strong>Museo Reina Sofía</strong>&nbsp; 2000-2010&nbsp; <h6>Programs  / </h6><h6>Brochures</h6> <a href="/mncars-cine-y-casi-cine">1,</a> <a href="mncars-sesiones-animadas">2,</a> <a href="/mncars-no-performances">3,</a> <a href="/mncars-amor">4,</a> <a href="/mncars-cine-y-casi-2007">5,</a> <a href="/mncars-latinoamerica">6</a><br /><strong>Audiovisual Arts Department identity</strong><br />Folded posters. 34x48 cm  48x68 cm'
