--- a/_posts/2018-01-02-mncars-latinoamerica.html
+++ b/_posts/2018-01-02-mncars-latinoamerica.html
@@ -1,5 +1,5 @@
 ---
-layout: post
+layout: post_old
 title: Visionarios Latinoamérica. MNCARS
 image_path: /projects/mncars-latinoamerica
 footer: '<strong>Museo Reina Sofía</strong>&nbsp; 2000-2010&nbsp;   <a href="/mncars-audiovisuales">Programs</a><h6>/ Brochures</h6> <a href="/mncars-cine-y-casi-cine">1,</a><a href="/mncars-sesiones-animadas">2,</a><a href="/mncars-no-performances">3,</a><a href="/mncars-amor">4,</a><a href="/mncars-cine-y-casi-2007">5,</a><h6>6</h6><br /><em><strong>Visionarios. Audiovisual en Latinoamérica.</strong></em> 2009, 48 pages, 12x17 cm'
