--- a/_posts/2018-01-02-andres-jaque.html
+++ b/_posts/2018-01-02-andres-jaque.html
@@ -2,7 +2,7 @@
 layout: post
 title: Andres Jaque
 image_path: /projects/andres-jaque
-footer: '<strong>Andrés Jaque / Office for Political Innovation</strong>&nbsp; 2017<br><strong><em>Transmaterial Politics</em></strong>. Catalogue and exhibition graphics '
+footer: '<strong>Tabacalera Promoción del Arte. Spanish Ministry of Culture & Sports</strong>&nbsp; 2017<br><strong><em>Andrés Jaque / Office for Political Innovation, Transmaterial Politics</em></strong>. Catalogue and exhibition graphics '
 style: '.content img{vertical-align:top;}
 '
 ---
