--- a/_posts/2018-01-02-leandro-katz.html
+++ b/_posts/2018-01-02-leandro-katz.html
@@ -2,7 +2,7 @@
 layout: post
 title: Leandro Katz
 image_path: /projects/leandro-katz
-footer: '<p><strong>Tabacalera Promoción del Arte. Ministerio de Educación, Cultura y Deporte</strong> 2017<br />  <em><strong>Leandro Katz. El rastro de la gaviota.</strong></em> Exhibition and graphic design. Book, 160 pages. 17x24 cm<br />  Exhibition images cortesy of Ministerio de Educación, Cultura y Deporte. Photos Andrés Arranz</p><p>&nbsp;</p>'
+footer: '<p><strong>Tabacalera Promoción del Arte. Spanish Ministry of Culture & Sports</strong> 2017<br />  <em><strong>Leandro Katz. El rastro de la gaviota.</strong></em> Exhibition and graphic design. Book, 160 pages. 17x24 cm<br />  Exhibition images courtesy of Spanish Ministry of Culture & Sports. Photography by Andrés Arranz</p><p>&nbsp;</p>'
 style: '
 body{background-color: #a5a5a5;}
 '
@@ -29,4 +29,3 @@ body{background-color: #a5a5a5;}
 
 
 <iframe src="https://player.vimeo.com/video/207815864?title=0[content]byline=0[content]portrait=0" width="951" height="535" frameborder="0" webkitallowfullscreen mozallowfullscreen class="espacio30"></iframe>
-
