--- a/estudio.html
+++ b/estudio.html
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: Studio
-footer: '<a href="/studio">Read in English.</a></br> Calle Pez, 27. Oficina 312. 28004 Madrid<br>T +34 915 328 011 <a href="mailto:info@elvivero.es">e-mail</a>'
+footer: '<a href="/studio">Read in English.</a></br> Calle Pez, 27. Oficina 312. 28004 Madrid<br>T +34 915 328 011 <a href="mailto:info@elvivero.es">e-mail</a><br><a href="https://www.instagram.com/elviverodesign" target="_blank" class="nohover">Instagram</a>'
 style: "img{
 	height: 535px;
 	display: inline
