--- a/_posts/2018-01-02-cine-por-mujeres.html
+++ b/_posts/2018-01-02-cine-por-mujeres.html
@@ -19,4 +19,6 @@ style: '.content img{
 ---
 <img class="fix535" src="{% include image_path.html %}/cinemujereslogo.jpg">
 <img class="fix535 espacio30" src="{% include image_path.html %}/cinemujeres01.gif">
+
+<iframe src="https://player.vimeo.com/video/310591754?loop=1&title=0&byline=0&portrait=0" width="1237" height="535" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen class= "espacio30"></iframe>
 <iframe src="https://player.vimeo.com/video/310297437?title=0&byline=0&portrait=0" width="952" height="535" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
