leandro page no index

--- a/leandro.html
+++ b/leandro.html
@@ -5,6 +5,7 @@ layout: blank
 	
 		<meta charset="utf-8"/>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, user-scalable=no">
+    <meta name="robots" content="noindex,nofollow">
     <script type="text/javascript" src="{{ site.baseurl }}/assets/jquery-3.2.1.min.js"></script>
 		<link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/css/leandro.css">
 		<title>Leandro Lattes</title>
