fixes and new arrows

--- a/_posts/2018-01-02-freshlatino2.html
+++ b/_posts/2018-01-02-freshlatino2.html
@@ -3,9 +3,7 @@ layout: post
 title: Freshlatino 2
 image_path: /projects/freshlatino2
 footer: '<strong>Instituto Cervantes</strong> 2013-2015<br><em><strong>freshlatino 2.</strong></em> Iberoamerican experimental architecture platform<br />Visual identity, web, exhibition space and brochure design'
-style: '
-body{background-color: #a5a5a5;}
-'
+style: 'body{background-color: #a5a5a5;}'
 ---
 <iframe src="https://player.vimeo.com/video/113272641?autoplay=1&title=0&byline=0&portrait=0" width="952" height="535" frameborder="0" webkitallowfullscreen mozallowfullscreen class="espacio30"></iframe>
 <img class="fix535" src="{% include image_path.html %}/FreshL2-.jpg">
