--- a/_posts/2018-01-02-leandro-katz.html
+++ b/_posts/2018-01-02-leandro-katz.html
@@ -3,9 +3,7 @@ layout: post
 title: Leandro Katz
 image_path: /projects/leandro-katz
 footer: '<p><strong>Tabacalera Promoción del Arte. Spanish Ministry of Culture & Sports</strong> 2017<br />  <em><strong>Leandro Katz. El rastro de la gaviota.</strong></em> Exhibition and graphic design. Book, 160 pages. 17x24 cm<br />  Exhibition images courtesy of Spanish Ministry of Culture & Sports. Photography by Andrés Arranz</p><p>&nbsp;</p>'
-style: '
-body{background-color: #a5a5a5;}
-'
+style: 'body{background-color: #a5a5a5;}'
 ---
 
 
