--- a/_posts/2018-01-02-ono.html
+++ b/_posts/2018-01-02-ono.html
@@ -1,25 +1,8 @@
 ---
-layout: post
+layout: post_old
 title: Ono
 image_path: /projects/ono
 footer: '<strong>Ono, Telephone, internet and cable television services provider, </strong> 2004 <br>Interior design, flagship stores in Valencia  Castellón'
-style: '.content img{
-	display: inline;
-}
-.content img{
-	vertical-align:top;
-}
-.content{
-	margin-top: 65px;
-	font-family: arial;
-	height:300px;
-	padding: 25px;
-	font-size:14px;
-	padding-bottom: 20px;
-	padding-top: 0px;
-	white-space: nowrap;
-}
-'
 ---
 <img src="{% include image_path.html %}/ono-1.jpg">
 <img src="{% include image_path.html %}/ono-2.jpg">
@@ -31,4 +14,3 @@ style: '.content img{
 <img src="{% include image_path.html %}/ono-8.jpg">
 
 <iframe src="//player.vimeo.com/video/112489816?title=0[content]amp;byline=0[content]amp;portrait=0[content]amp;color=ffffff" width="399" height="300" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-
