--- a/_posts/2018-01-02-outsiders-cuba.html
+++ b/_posts/2018-01-02-outsiders-cuba.html
@@ -3,20 +3,7 @@ layout: post
 title: Nuevo arte outsider de Cuba
 image_path: /projects/outsiders-cuba
 footer: '<strong>Naemi, National Art Exhibition by the Mentally Ill</strong>&nbsp;  2014<br><em><strong>New Outsider Art from Cuba.</strong></em> Catalogue, 64 pages, 21x21 cm'
-style: 'body{background-color: #a5a5a5;}
-.content img{
-	vertical-align:top;
-}
-.content{
-	margin-top: 65px;
-	font-family: arial;
-	height: 535px;
-	padding: 25px;
-	font-size:14px;
-	padding-bottom: 20px;
-	padding-top: 0px;
-	white-space: nowrap;
-}'
+style: 'body{background-color: #a5a5a5;}'
 ---
 <iframe src="//player.vimeo.com/video/114053215?title=0[content]amp;byline=0[content]amp;portrait=0[content]amp;color=ffffff[content]amp;autoplay=1[content]amp;loop=1" width="951" height="535" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen class="espacio30" ></iframe>
 
@@ -40,6 +27,3 @@ style: 'body{background-color: #a5a5a5;}
 <img src="{% include image_path.html %}/outsiders-cuba-22.jpg">
 <img src="{% include image_path.html %}/outsiders-cuba-23.jpg" class="espacio25">
 <img src="{% include image_path.html %}/outsiders-cuba-26.jpg" class="espacio25">
-
-
-
