--- a/_posts/2018-01-02-ps1.html
+++ b/_posts/2018-01-02-ps1.html
@@ -3,7 +3,7 @@ layout: post_old
 title: RRT PS1
 image_path: /projects/ps1
 footer: '<strong>Ministerio de Exteriores / AECI</strong> &nbsp;2003 <br><em><strong>The Real Royal Trip, PS1.</strong></em>  Brochure, folder, press release, invitations'
-style: 'body{background-color: #a5a5a5;} .content img{vertical-align:top;}'
+style: 'body{background-color: #a5a5a5;}'
 ---
 
 <img src="{% include image_path.html %}/ps-01.jpg">
