--- a/_posts/2018-01-02-pitch-in.html
+++ b/_posts/2018-01-02-pitch-in.html
@@ -2,20 +2,7 @@
 layout: post
 title: Pitch-In
 image_path: /projects/pitch-in
-footer: "<strong>Ayuntamiento de Madrid, La noche en blanco</strong> 2010<br /><strong><em> Pitch-in.</em> </strong> Paper basket design, produced out of the carpet installed to celebrate Madrid's Gran Vía 100th anniversary <br />Event concept & design: Pitch-in game"
-style: '.content img{
-	display: inline;
-}
-.content{
-	margin-top: 65px;
-	font-family: arial;
-	height:535px;
-	padding: 25px;
-	font-size:14px;
-	padding-bottom: 20px;
-	padding-top: 0px;
-	white-space: nowrap;
-}'
+footer: "<strong>Ayuntamiento de Madrid, La noche en blanco</strong> 2010<br /><strong><em> Pitch-in.</em> </strong> Paper basket design, produced out of the carpet installed to celebrate Madrid's Gran Vía 100th anniversary <br>Event concept & design: Pitch-in game"
 ---
 <img class="fix535" src="{% include image_path.html %}/lnb.jpg">
 <img class="fix535" src="{% include image_path.html %}/lnb11.jpg">
