--- a/leandro.html
+++ b/leandro.html
@@ -20,7 +20,7 @@ flex-wrap: wrap;
     <li><a href="/ono" class="current">Ono</a></li>
     <li><a href="/madritel" class="current">Madritel</a></li>
     <li><a href="/r" class="current">R internet-telefonía-televisión</a></li>
-    <li><a href="/madrid-km.0" class="current">Madrid km 0</a></li>
+    <li><a href="/madrid-km0" class="current">Madrid km 0</a></li>
     <li><a href="/barnasud" class="current">Centro comercial Barnasud</a></li>
     <li><a href="/argentaria" class="current">Argentaria. Corporate & Investment Banking</a></li>
     <li><a href="/detusche-bank" class="current">Detusche Bank</a></li>
