--- a/_posts/2019-01-02-el-poder-del-arte.html
+++ b/_posts/2019-01-02-el-poder-del-arte.html
@@ -13,8 +13,8 @@ footer: '<p><strong>El poder del arte</strong><br />  <strong>Instituto Cervante
 
 <img class="fix535 espacio25" src="{% include image_path.html %}/pda5.jpg">
 
-<img class="fix535 espacio25" src="{% include image_path.html %}/autobus.gif">
-<img class="fix535" src="{% include image_path.html %}/pda6.jpg">
+<img class="fix535" src="{% include image_path.html %}/autobus.gif">
+<img class="fix535 espacio25" src="{% include image_path.html %}/pda6.jpg">
 
 
 <img class="fix535 espacio25" src="{% include image_path.html %}/Publicacion-el-poder-del-arte.gif">
