--- a/_posts/2018-01-02-cine-por-mujeres.html
+++ b/_posts/2018-01-02-cine-por-mujeres.html
@@ -4,8 +4,8 @@ title: Cine por mujeres
 image_path: /projects/cine-por-mujeres
 footer: '<p><strong>Cine por mujeres</strong><br />  <strong>Instituto Cervantes / Goethe Institut </strong> 2014-2015<br />VI Spanish-German Culture Meeting. Berlín amp; Madrid <br />Visual identity, web, exhibition graphics, catalog, postcard and brochure design. <a href="http://architectusomnibus.org/" target="new">www.architectusomnibus.org</a>'
 ---
-<img class="fix535" src="{% include image_path.html %}/cinemujereslogo.jpg">
-<img class="fix535 espacio30" src="{% include image_path.html %}/cinemujeres01.gif">
+<img class="fix535" src="{% include image_path.html %}/Brandonclip.gif">
+<img class="fix535 espacio30" src="{% include image_path.html %}/Logoanimation.gif">
 
 <iframe src="https://player.vimeo.com/video/310591754?loop=1&title=0&byline=0&portrait=0" width="1237" height="535" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen class= "espacio30"></iframe>
 <iframe src="https://player.vimeo.com/video/310297437?title=0&byline=0&portrait=0" width="952" height="535" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
