--- a/_posts/2018-01-02-cine-por-mujeres.html
+++ b/_posts/2018-01-02-cine-por-mujeres.html
@@ -9,6 +9,7 @@ footer: '<p><strong>Cine por mujeres</strong><br />  <strong>Limbo producciones<
 
 <img class="fix535 espacio30" src="{% include image_path.html %}/CartelCPM.png">
 <img class="fix535 espacio30" src="{% include image_path.html %}/CartelCPM2.png">
+<img class="fix535 espacio30" src="{% include image_path.html %}/Cartelmupi.png">
 
 <iframe src="https://player.vimeo.com/video/331540989?autoplay=1&loop=1&title=0&byline=0&portrait=0" width="535" height="472" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
 
